<resources>
    <string name="app_name">CenteMobile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="forgot_pin">Forgot Pin?</string>
    <string name="login_securely">Login Securely</string>
    <string name="hello_there">Hello There!</string>
    <string name="we_have_missed_you">We have missed You</string>
    <string name="mobile">Mobile</string>
    <string name="pin">Pin</string>
    <string name="otp_">OTP</string>
    <string name="enter_otp">Enter the One-Time Password\nsent to Your Mobile Number or Email</string>
    <string name="resend_otp">Resend</string>
    <string name="verification">Verification</string>
    <string name="feedback_verypoor">Very Poor</string>
    <string name="feedback_poor">Poor</string>
    <string name="feedback_average">Average</string>
    <string name="feedback_good">Good</string>
    <string name="feedback_excellent">Excellent</string>
    <string name="add_comment">Kindly add comment for low ratings</string>
    <string name="choose_rating">Kindly choose a rating before submitting or tap on dismiss</string>
    <string name="submit_">Submit</string>
    <string name="dismiss">Dismiss</string>
    <string name="otp_required">Enter OTP</string>
    <string name="hello_jane">Hello</string>
    <string name="duration">Duration</string>
    <string name="logout">Logout</string>
    <string name="log_out">Logout</string>
    <string name="image">Image</string>
    <string name="avatar">Avatar</string>
    <string name="error">Error</string>
    <string name="something_">Something went wrong\nTry Again Later!</string>
    <string name="pin_required">Pin required</string>
    <string name="opt_required">OTP required</string>
    <string name="thank_you_for_using">Thank you for using</string>
    <string name="centmobile">CenteMobile.</string>
    <string name="you_have_succesfully_logged_out">You have successfully logged out</string>
    <string name="welcome_cente">Welcome To Centenary Bank Mobile Banking</string>
    <string name="branch_atm"><![CDATA[Branches\n& ATM]]></string>
    <string name="cente_login">CenteMobile\nLogin</string>
    <string name="online_banking">Internet\nBanking</string>
    <string name="good_night">Good Night</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_morining">Good  Morning</string>
    <string name="good_evening">Good Evening</string>
    <string name="cente_on_go">Cente\nOn The Go</string>
    <string name="recent">Recent</string>
    <string name="close">Close</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="refresh_token">Refresh Token</string>
    <string name="semi_">:</string>
    <string name="trans_module">Transaction Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="error_fetching_recent">Error fetching recent transactions</string>
    <string name="share">Share</string>
    <string name="success">Success</string>
    <string name="your_transaction_success">Your transaction was successful!</string>
    <string name="download">Download</string>
    <string name="finish">Finish</string>
    <string name="ok_">OK</string>
    <string name="contacts">contacts</string>
    <string name="_required">Required</string>
    <string name="all_field_required">Fields required</string>
    <string name="mobile_required">Mobile Number required</string>
    <string name="enter_pin">Pin required</string>
    <string name="currency_">UGX.</string>
    <string name="forgot_pin_">Forgot Pin</string>
    <string name="please_enter_your_info">Please enter your Account Details below to reset your Pin</string>
    <string name="please_enter_account_your_info">Please enter your Account Details below</string>
    <string name="account_number">Account Number</string>
    <string name="atm_card_number">ATM Card Number</string>
    <string name="atm_card_pin">ATM Pin</string>
    <string name="reset">Reset</string>
    <string name="enter_account_number">Account Number Required</string>
    <string name="enter_atm_number">ATM Number Required</string>
    <string name="enter_atm_pin">Enter Your ATM Pin</string>
    <string name="account_number_invalid">Account Number should be more than 7 digits</string>
    <string name="atm_pin_invalid">ATM Pin should be 4 characters</string>
    <string name="atm_number_invalid">ATM Card Number should be more than 12 digits</string>
    <string name="self_reg">Self Registration</string>
    <string name="twitter">twitter</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="please_read_this_careful">Please read this disclaimer carefully\nbefore using Centenary Mobile</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="os">OS</string>
    <string name="link_device_account">Would you like to link this device to\nyour account?</string>
    <string name="proceed">Proceed</string>
    <string name="disclaimer_explain">Dear customer, in order to continue accessing mobile banking securely,You will be required to register your device.Kindly press \'PROCEED\' to register this device.</string>
    <string name="total_amount">Total Amount</string>
    <string name="welcome_to_self">Welcome To\nSelf Registration</string>
    <string name="lets_start_with_card_details">Almost done.Now enter your card details so that we can verify you are you</string>
    <string name="lets_start_with_mobile_details">Lets get you started, please enter your mobile number</string>
    <string name="continue_">Continue</string>
    <string name="cente_self_reg">Centenary\nSelf Registration</string>
    <string name="mobile_less">Enter valid mobile number</string>
    <string name="info_">Info</string>
    <string name="otp_invalid">Enter valid OTP</string>
    <string name="welcome_back_to">Welcome To Centenary Bank</string>
    <string name="activation">Activation</string>
    <string name="open_ku">Open Ku Supiidii</string>
    <string name="digitally">Digitally. Instantly.</string>
    <string name="welcome_to_">Welcome To\n</string>
    <string name="cente">Cente</string>
    <string name="on_">On</string>
    <string name="the">The</string>
    <string name="go">Go</string>
    <string name="open_account">Open an account</string>
    <string name="lets_get">Let\'s Get Started</string>
    <string name="customer_product"><![CDATA[Customer Type\n& Product]]></string>
    <string name="fatal_error">Fatal Error</string>
    <string name="parsing_error">Something went wrong - parsing error</string>
    <string name="whoops">Whoops!</string>
    <string name="slow_no_">Slow or no internet connections\nplease check your connection and try again</string>
    <string name="connection">Connection</string>
    <string name="ATM">ATMs</string>
    <string name="branch_">Branches</string>
    <string name="direction">direction</string>
    <string name="i_am">I am a</string>
    <string name="new_customer">New Customer</string>
    <string name="existing_customer">Existing Customer</string>
    <string name="pref_account">Preferred Account</string>
    <string name="account_currency">Account Currency</string>
    <string name="pref_branch">Preferred Branch</string>
    <string name="select_one">Select one</string>
    <string name="select_currency">Select currency</string>
    <string name="select_branch">Select branch</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="agree_terms">I Agree with terms and conditions</string>
    <string name="back_">Back</string>
    <string name="next">Next</string>
    <string name="terms">https://www.centenarybank.co.ug/index.php/category/savings</string>
    <string name="please_agree_terms">Please agree to Terms And Conditions</string>
    <string name="national_id">ID Details</string>
    <string name="connect_with_us">Connect with US!</string>
    <string name="title">Select Title</string>
    <string name="id_front">National Identity Card (Front)</string>
    <string name="camera_from">Take Photo</string>
    <string name="select_storage">Select from storage</string>
    <string name="option_missing">Picker option missing</string>
    <string name="image_picker">Image Picker</string>
    <string name="info">Information</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">Settings</string>
    <string name="location_required">Device location is disabled. Do you want to enable it?</string>
    <string name="tap_take_photo">Tap to take picture</string>
    <string name="passport_photo">Passport Photo (Selfie)</string>
    <string name="signature">Signature</string>
    <string name="id_required">ID required</string>
    <string name="selfie_required">Selfie required</string>
    <string name="signature_required">Signature required</string>
    <string name="select_title">Select your title</string>
    <string name="national_id_details">Confirm your ID Details</string>
    <string name="given_name">Given Name</string>
    <string name="surname">Surname</string>
    <string name="id_">ID</string>
    <string name="other_names">Other Names (Optional)</string>
    <string name="dob_">Date Of Birth (DD-MM-YYYY)</string>
    <string name="given_name_required">Enter your given name</string>
    <string name="surname_required">Enter your surname</string>
    <string name="dob_required">Enter your date of birth</string>
    <string name="adjust_id_try">Unable to read your National ID  details,please adjust your ID and try again</string>
    <string name="parent_details">Parent\nInformation</string>
    <string name="f_f_name">Father\'s First Name</string>
    <string name="f_m_name">Father\'s Middle Name (optional)</string>
    <string name="f_l_name">Father\'s Last Name</string>
    <string name="m_f_name">Mother\'s First Name</string>
    <string name="m_m_name">Mother\'s Middle Name (optional)</string>
    <string name="m_l_name">Mother\'s Last Name</string>
    <string name="home_district">Home District</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="politically_ex">Politically Exposed</string>
    <string name="medium">Medium</string>
    <string name="tv_radio">Tv/Radio</string>
    <string name="social_media">Social Media</string>
    <string name="bank_staff">Bank Staff</string>
    <string name="customer_current">Cente Customer</string>
    <string name="agent">Agent</string>
    <string name="face_book">Facebook</string>
    <string name="insta">Instagram</string>
    <string name="which_platform">Which platform did you find us?</string>
    <string name="use_touch_id">Use fingerprint  for faster and easy access\nto your  Account</string>
    <string name="enable_touch_id_login">Enable Fingerprint Login</string>
    <string name="login_touch">Login with Fingerprint</string>
    <string name="Biometric">biometric</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_qr_code_quick">QR Code quick scan</string>
    <string name="scan_qr_code_tap">Tap on the above image to start scanning</string>
    <string name="no_notification">No notifications yet!</string>
    <string name="no_data">No Data</string>
    <string name="no_data_later">No data,please try again later</string>
    <string name="security">security</string>
    <string name="sorry_no_root">Sorry, CenteMobile is not supported on Rooted devices</string>
    <string name="we_take_security">We\'re serious about  keeping your data secure</string>
</resources>