<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/which_platform"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioFace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:maxLines="1"
                android:text="@string/face_book"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/twitter"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioInsta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/insta"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />


        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>