<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="@dimen/dimens_120dp"
            android:layout_height="@dimen/dimens_120dp"
            android:layout_above="@+id/title"
            android:layout_centerHorizontal="true"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/scan_qr_code"
            android:padding="@dimen/dimens_20dp"
            android:scaleType="fitXY"
            android:src="@drawable/qr_code"
            app:tint="@color/dar_color_one" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/scan_qr_code_quick"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/scan_qr_code_tap"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

    </RelativeLayout>
</layout>