<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.auth.bio.BiometricFragment">

    <data>

        <variable
            name="callback"
            type="com.craft.silicon.centemobile.util.callbacks.AppCallbacks" />

        <variable
            name="data"
            type="com.craft.silicon.centemobile.view.ep.data.DynamicData" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.App.Toolbar"
                callback="@{callback}"
                modules="@{data}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/dimens_0dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/validation_menu"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_80dp"
                android:layout_above="@id/title"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="@dimen/dimens_16dp"
                android:contentDescription="@string/Biometric"
                android:src="@drawable/biometrics" />


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/subTitle"
                android:layout_marginHorizontal="@dimen/dimens_24dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/login_touch"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/subTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="@dimen/dimens_24dp"
                android:alpha="0.9"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/use_touch_id"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                tools:targetApi="o" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleGroup"
                android:layout_below="@id/subTitle"
                android:layout_centerHorizontal="true">


                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:id="@+id/enableBio"
                    android:layout_height="@dimen/dimens_60dp"
                    android:layout_marginVertical="@dimen/dimens_16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/enable_touch_id_login"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>